--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,46 @@
+# Requerimientos mínimos de CMake
 cmake_minimum_required(VERSION 3.16)
+
+# Nombre del proyecto
 project(cppweb)
 
+# Configuración del estándar de C++
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-# Incluir Crow desde su ubicación en el sistema
+# Incluir directorios de Crow y otras dependencias
 include_directories(/usr/local/src/crow/include)
 
-# Archivo fuente principal
+# Configurar el directorio de salida para los binarios
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+
+# --------------------------------
+# Aplicación principal
+# --------------------------------
+# Archivos fuente principales
 add_executable(cppweb src/main.cpp)
 
-# Linkear la librería SSL (necesaria para Crow)
+# Linkear librerías necesarias
 target_link_libraries(cppweb ssl crypto pthread)
+
+# --------------------------------
+# Tests unitarios
+# --------------------------------
+# Habilitar testing
+enable_testing()
+
+# Asegúrate de que Google Test está disponible
+find_package(GTest REQUIRED)
+
+# Añadir ejecutable para los tests
+add_executable(unit_tests tests/main_test.cpp)
+
+# Vincular Google Test y pthread al ejecutable de tests
+target_link_libraries(unit_tests PRIVATE GTest::GTest GTest::Main pthread)
+
+# Registrar los tests para que puedan ejecutarse con `ctest`
+add_test(NAME RunTests COMMAND unit_tests)
+
+# Opcional: Mostrar mensajes adicionales para facilitar la depuración
+message(STATUS "C++ Standard: ${CMAKE_CXX_STANDARD}")
+message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
