[REFRACTOR]: HexUtils (toHex)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ find_package(CURL REQUIRED)
 # Aplicación principal
 # --------------------------------
 # Archivos fuente principales
-add_executable(cppweb src/main.cpp src/server.cpp src/hash256.cpp)
+add_executable(cppweb src/main.cpp src/server.cpp src/hash256.cpp src/HexUtils.cpp)
 
 # Linkear librerías necesarias
 target_link_libraries(cppweb ssl crypto pthread)
@@ -39,8 +39,8 @@ enable_testing()
 find_package(GTest REQUIRED)
 
 # Añadir ejecutable para los tests
-add_executable(unit_tests tests/main_test.cpp src/server.cpp src/hash256.cpp)
-add_executable(hash256_tests tests/hash256_tests.cpp src/hash256.cpp)
+add_executable(unit_tests tests/main_test.cpp src/server.cpp src/hash256.cpp src/HexUtils.cpp)
+add_executable(hash256_tests tests/hash256_tests.cpp src/hash256.cpp src/HexUtils.cpp)
 
 # Vincular Google Test y pthread al ejecutable de tests
 target_link_libraries(unit_tests PRIVATE gtest gtest_main pthread curl ssl crypto )
